fix mono and header visible pixel

--- a/styles/scss/_media.scss
+++ b/styles/scss/_media.scss
@@ -66,54 +66,46 @@
 @media (max-width: 1150px) {
     .price{
         padding: 44px 0;
-        .mono{
-            margin: 12px 0 0 0;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            padding: 8px 0;
-            gap: 12px;
-            border-top: 1px dashed rgba($color: #CFD9E1, $alpha: 0.15);
-            border-bottom: 1px dashed rgba($color: #CFD9E1, $alpha: 0.15);
-            &-txt{
-                h3{
-                    font-size: 13px;
-                    font-weight: 700;
-                    line-height: 18.5px;
-                    letter-spacing: -1px;
-                    background: var(--Silver, linear-gradient(138deg, #E1E1E9 62.82%, rgba(255, 255, 255, 0.44) 82.32%));
-                    background-clip: text;
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                }
-                span {
-                    color: var(--White, #CFD9E1);
-                    font-size: 10px;
-                    font-weight: 600;
-                    letter-spacing: -0.2px;
-                    .gray {
-                        color: #5B5B5A;
-                    }
-                }
-            }
-            &-img{
-                //border: 1px solid red;
-                position: relative;
-                img:nth-child(1) {
-                    position: absolute;
-                    top: 0;
-                    left: 10px;
-                }
-                img:nth-child(2) {
-                    position: absolute;
-                    bottom: 5px;
-                    left: 20px;
-                    transform: rotate(40deg);
-                }
-            }
-        }
         &-bg1, &-bg2{
             display: none;
+        }
+        .title-wrapper{
+            flex-direction: column;
+            margin: 0 0 12px 0;
+            gap: 12px;
+            .mono{
+                padding: 8px 0;
+                border-top: 1px dashed rgba($color: #CFD9E1, $alpha: 0.15);
+                border-bottom: 1px dashed rgba($color: #CFD9E1, $alpha: 0.15);
+                width: 100%;
+                &-cat{
+                    width: 56px;
+                    height: 60px;
+                }
+                &-txt{
+                    h3{
+                        font-size: 14px;
+                        font-weight: 600;
+                        letter-spacing: -0.28px;
+                        background: var(--Silver, linear-gradient(138deg, #E1E1E9 62.82%, rgba(255, 255, 255, 0.44) 82.32%));
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                    p {
+                        color: var(--White, #CFD9E1);
+                        font-size: 10px;
+                        font-weight: 600;
+                        letter-spacing: -0.2px;
+                        .gray {
+                            color: #5B5B5A;
+                        }
+                    }
+                }
+                &-img{
+                    display: block;
+                }
+            }
         }
         .title{
             font-size: 30px;
