--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -141,7 +141,7 @@ body{
             background: var(--CTA, linear-gradient(90deg, #00042F 5.71%, rgba(0, 4, 47, 0.95) 89.23%));
             padding: 114px 20px 44px 20px;
             &.active{
-                top: 1px;
+                top: 0;
             }
             &-txt{
                 display: block;
@@ -224,7 +224,7 @@ body{
 }
 
 .main{
-    padding: 74px 0 0 0;
+    padding: 75px 0 0 0;
     position: relative;
     .row {
         display: flex;
@@ -671,9 +671,6 @@ body{
         border-bottom: 1px solid rgba(255, 255, 255, 0.15);
     }
 }
-.mono{
-    display: none;
-}
 
 .price{
     padding: 100px 0;
@@ -685,10 +682,63 @@ body{
         right: -55px;
         z-index: -333;
     }
+    .title-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        margin: 0 0 40px 0;
+        .mono{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            align-items: center;
+            gap: 12px;
+            &-cat{
+                width: 38px;
+                height: 40px;
+            }
+            &-txt{
+                h3{
+                    font-size: 14px;
+                    font-weight: 600;
+                    letter-spacing: -0.28px;
+                    background: var(--Silver, linear-gradient(138deg, #E1E1E9 62.82%, rgba(255, 255, 255, 0.44) 82.32%));
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+                p {
+                    color: var(--White, #CFD9E1);
+                    font-size: 10px;
+                    font-weight: 600;
+                    letter-spacing: -0.2px;
+                    .gray {
+                        color: #5B5B5A;
+                    }
+                }
+            }
+            &-img{
+                display: none;
+                position: relative;
+                img:first-child {
+                    position: absolute;
+                    bottom: 0;
+                    left: 20px;
+                }
+                img:last-child {
+                    position: absolute;
+                    top: 0;
+                    left: 30px;
+                    transform: rotate(40deg);
+                }
+            }
+        }
+    }
     .title{
+        margin: 0 40px 0 0;
         font-size: 44px;
         font-weight: 700;
-        line-height: 80px;
+        //line-height: 80px;
         letter-spacing: -1px;
         @include bg-linear-silver;
     }
